--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,59 +3,76 @@
   font-family: 'Roboto';
 }
 
-body{
+body {
   min-height: 100vh;
   padding-bottom: 100px;
   position: relative;
 }
 
-header{
-  background-color: #fff;
-  border-bottom: 1px solid #ccc;
+header {
+  background-color: #FFF;
+  border-bottom: 1px solid #CCC;
 }
 
-.row{
+.row {
   margin: 0;
 }
 
-.container-fluid{
+.container-fluid {
   padding: 0;
 }
 
-.btn-primary{
-  background-color: #f2a340;
-  border: 2px solid #c28008;
+.btn-primary {
+  background-color: #F2A340;
+  border: 2px solid #C28008;
 }
 
-.btn-primary:hover{
-  background-color: #c78208;
-  border-color: #c78208
+.btn-primary:hover {
+  background-color: #C28008;
+  border-color: #C28008;
 }
 
-/* Navbar */
+.msg {
+  background-color: #D4EDDA;
+  color: #155724;
+  border: 1px solid #C3E6CB;
+  width: 100%;
+  margin-bottom: 0;
+  text-align: center;
+  padding: 10px;
+}
 
-#navbar{
+#info-container .already-joined-msg {
+  margin: 15px 0;
+  color: #004085;
+  background-color: #CCE5FF;
+  border: 1px solid #B8DAFF;
+  padding: 10px;
+  width: 275px;
+}
+
+/* navbar */
+#navbar img {
+  width: 40px;
+}
+
+#navbar {
   justify-content: space-between;
-  background-color: #fff;
-  padding:5px 0;
+  background-color: #FFF;
+  padding: 5px 0;
 }
 
-#navbar a{
+#navbar a {
   font-size: 14px;
   color: #757575;
 }
 
-#navbar a:hover{
-  color: #f2a340;
-}
-
-.navbar img{
-  padding: 5px;
-  width: 40px;
+#navbar a:hover {
+  color: #F2A340;
 }
 
 /* Search Container */
-#search-container{
+#search-container {
   background-image: url("../img/banner.jpg");
   background-size: cover;
   background-position: center;
@@ -64,94 +81,163 @@ header{
   text-align: center;
 }
 
-#search-container h1{
-  color: #f2a340;
-  margin-bottom: 50px;
+#search-container h1 {
+  color: #F2A340;
+  margin-bottom: 30px;
   font-weight: 900;
-
 }
 
-#search-container form{
+#search-container form {
   width: 50%;
   margin: 0 auto;
 }
 
-/* Events List */
-#events-container{
+/* Events list */
+#events-container {
   padding: 50px;
 }
 
-#envets-container h2{
+#events-container h2 {
   margin-bottom: 10px;
 }
 
-#envets-container .subtitle{
+#events-container .subtitle {
   color: #757575;
   margin-bottom: 30px;
 }
 
-#cards-container{
+#cards-container {
   display: flex;
 }
 
-#events-container .card{
-  flex 1 1 0;
+#events-container .card {
+  flex: 1 1 24%;
   max-width: 25%;
   border-radius: 10px;
   padding: 0;
-  margin: 5px;
+  margin: .5%;
 }
 
-#events-container img{
+#events-container img {
   max-height: 150px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
 
-.card .card-date{
+.card .card-date {
   font-size: 12px;
-  color: #ccc;
+  color: #CCC;
 }
 
-.card .card-title{
+.card .card-title {
   color: #212121;
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 30px;
 }
 
-.card-participants{
+.card-participants {
   font-size: 14px;
   color: #757575;
 }
 
-/* Event Create */
-#event-create-container{
-  padding: 30px;
+/* Event create page */
+#event-create-container {
+  padding: 30px
 }
 
-#event-create-container label{
+#event-create-container label {
   font-weight: bold;
 }
 
-#event-create-container input, 
-#event-create-container select, 
-#event-create-container textarea{
+#event-create-container input,
+#event-create-container select,
+#event-create-container textarea {
   font-size: 12px;
-} 
+}
 
+/* Event page */
+#image-container,
+#info-container {
+  margin-top: 30px;
+}
 
-/* Footer */
-footer{
+#image-container img {
+  border-radius: 10px;
+}
+
+#info-container h1 {
+  font-size: 36px;
+  font-weight: 900;
+}
+
+#info-container p {
+  margin: 0;
+  font-size: 14px;
+  display: flex;
+}
+
+#info-container h3,
+#description-container h3 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+#info-container ion-icon {
+  font-size: 20px;
+  color: #F2A340;
+  margin-right: 5px;
+}
+
+#info-container #event-submit {
+  margin: 20px 0;
+}
+
+#items-list {
+  list-style: none;
+  padding-left: 0;
+}
+
+#items-list li {
+  display: flex;
+}
+
+#description-container {
+  margin-top: 30px;
+}
+
+/* Dashboard */
+.dashboard-title-container {
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+.dashboard-events-container th {
+  width: 25%;
+}
+
+.dashboard-events-container form {
+  display: inline-block;
+}
+
+/* Edit page */
+
+.img-preview {
+  width: 100px;
+  margin-top: 20px;
+}
+
+/* footer */
+footer {
   text-align: center;
-  background-color: #353f48;
-  color: #fff;
+  background-color: #353E48;
+  color: #FFF;
   padding: 30px;
   position: absolute;
   bottom: 0;
   width: 100%;
 }
 
-footer p{
+footer p {
   margin-bottom: 0;
 }
