--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -155,6 +155,7 @@ header {
 #event-create-container select,
 #event-create-container textarea {
   font-size: 12px;
+  margin-bottom: 10px;
 }
 
 /* Event page */
@@ -226,6 +227,7 @@ header {
 .img-preview {
   width: 100px;
   margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 /* footer */
